--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@hookform/resolvers": "^3.10.0",
     "@tanstack/react-query": "^5.65.1",
     "axios": "^1.7.9",
+    "i18next": "^24.2.2",
     "next": "15.1.6",
-    "next-translate": "^2.6.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
+    "react-i18next": "^15.4.0",
     "zod": "^3.24.1"
   },
   "devDependencies": {
