feat: postlist story

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
+    "@storybook/addon-themes": "^8.5.3",
     "@tanstack/react-query": "^5.65.1",
     "@testing-library/user-event": "^14.6.1",
     "@vitejs/plugin-react": "^4.3.4",
@@ -30,8 +31,14 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@pmmmwh/react-refresh-webpack-plugin": "0.5.8",
+    "@storybook/addon-a11y": "^8.5.3",
     "@storybook/addon-essentials": "^8.5.2",
-    "@storybook/react": "^8.5.2",
+    "@storybook/addon-interactions": "^8.5.3",
+    "@storybook/addon-links": "^8.5.3",
+    "@storybook/addons": "^7.6.17",
+    "@storybook/nextjs": "^8.5.3",
+    "@storybook/react": "^8.5.3",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/node": "^20",
@@ -40,8 +47,8 @@
     "eslint": "^9",
     "eslint-config-next": "15.1.6",
     "husky": "^9.1.7",
-    "msw": "^2.7.0",
     "postcss": "^8",
+    "source-map": "^0.7.4",
     "storybook": "^8.5.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5",
