--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-v8": "^3.0.4",
     "axios": "^1.7.9",
+    "framer-motion": "^12.1.0",
     "i18next": "^24.2.2",
     "jsdom": "^26.0.0",
     "next": "15.1.6",
